@@ -1,0 +1,2 @@
+bin_SCRIPTS = gnome-autogen.sh
+
